V1.2.2 - mensageria com mais funcionalidade e ajuste no update de imagem
